# Minimal-SIP-Proxy-SIP-Client-with-UI

./: .gitignore  CMakeLists.txt  client_cli  sip_proxy
apps/: CMakeLists.txt  sip_client_main.cpp  sip_proxy_main.cpp
client/: CMakeLists.txt
client/include/client/: cli_handler.hpp  input_handler.hpp  sip_client.hpp  sip_client_state_manager.hpp  sip_invite_handler.hpp  sip_message.hpp  sip_message_factory.hpp  sip_receive_handler.hpp  sip_register_handler.hpp  sip_state_manager.hpp  udp_transport.hpp
client/src/: cli_handler.cpp  client_cli.cpp  main.cpp  sip_client.cpp  sip_client_state_manager.cpp  sip_invite_handler.cpp  sip_message_factory.cpp  sip_receive_handler.cpp  sip_register_handler.cpp  sip_state_manager.cpp
common/: CMakeLists.txt
common/include/common/: logger.hpp  sip_message.h  sip_message.hpp  sip_request.hpp  thread_safe_queue.h  thread_safe_queue.hpp  types.hpp
common/src/: logger.cpp  sip_message.cpp
docs/: architecture.md  build-run.md  interface-contracts.md  sip-grammmar.md
metrics/: CMakeLists.txt
metrics/src/: metrics_collector.cpp  metrics_server.cpp
networking/: CMakeLists.txt
networking/include/networking/: IUdpTransport.hpp  dispatcher.hpp  tcp_socket.hpp  tcp_transport.cpp  tcp_transport.hpp  thread_pool.h  thread_pool.hpp  udp_socket.h  udp_socket.hpp  udp_transport.h  udp_transport.hpp
networking/src/: dispatcher.cpp  servermain.cpp  tcp_socket.cpp  thread_pool.cpp  udp_socket.cpp  udp_transport.cpp
proxy/: CMakeLists.txt
proxy/include/proxy/: call_registry.hpp  call_session.hpp  call_state.hpp  call_state_machine.hpp  metrics_collector.hpp  metrics_server.hpp  register_handler.hpp  registration_table.hpp  sip_parser.hpp  sip_proxy.hpp  sip_router.hpp
proxy/src/: call_registry.cpp  call_session.cpp  call_state.cpp  call_state_machine.cpp  metrics_collector.cpp  metrics_server.cpp  register_handler.cpp  registration_table.cpp  sip_parser.cpp  sip_proxy.cpp  sip_router.cpp
scripts/: run_client.sh  run_proxy.sh  stress_test.sh  stress_test_memory.sh
tests/: CMakeLists.txt  parser_tests.cpp  register_tests.cpp  thread_pool_tests.cpp
ui/: CMakeLists.txt
ui/include/ui/: call_window.hpp  header_injection_widget.hpp  main_window.hpp  registration_window.hpp  sip_qt_app.hpp
ui/src/: call_window.cpp  header_injection_widget.cpp  main_window.cpp  registration_window.cpp  sip_qt_app.cpp
